[package]
authors = ["Vladas Zakrevskis <146100@gmail.com>"]
description = "Half make"
edition = "2021"
homepage = "https://github.com/VladasZ/ke"
license = "MIT OR Apache-2.0"
name = "ke"
repository = "https://github.com/VladasZ/ke"
version = "0.6.0"

[[bin]]
name = "ke"


[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
open = { workspace = true }
yaml-rust = { workspace = true }
